# ribopper

./: .editorconfig  .gitignore  .oxlintrc.json  Cargo.toml  README.md  biome.json  lefthook.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/workflows/: release.yml
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json  desktop.json
crates/app/icons/: icon.icns
crates/app/src/: lib.rs  main.rs
crates/app/src/clipboard/: mod.rs
crates/app/src/commands/: action.rs  clipboard.rs  command.rs  common.rs  config.rs  db.rs  func.rs  mod.rs  record.rs  store.rs  target.rs  window.rs
crates/app/src/events/: mod.rs
crates/app/src/logger/: mod.rs
crates/app/src/menu/: context.rs  mod.rs  tray.rs
crates/app/src/models/: common.rs  mod.rs  record.rs
crates/app/src/store/: clipboard.rs  config.rs  db.rs  mod.rs
crates/app/src/tray/: mod.rs
crates/app/src/utils/: constant.rs  error.rs  mod.rs  path.rs  pos.rs  qrcode.rs
crates/app/src/window/: mod.rs
crates/clipboard/: Cargo.toml
crates/clipboard/src/: clipboard.rs  error.rs  lib.rs  manager.rs  models.rs
crates/db/: Cargo.toml
crates/db/sql/: action.sql  init.sql  record.sql
crates/db/src/: error.rs  lib.rs
crates/db/src/migration/: mod.rs
crates/db/src/models/: action.rs  command.rs  mod.rs  record.rs  record_action.rs  record_target.rs  target.rs
crates/db/src/schema/: mod.rs
crates/db/src/sql/: action.rs  command.rs  db.rs  migration.rs  mod.rs  record.rs  record_action.rs  record_target.rs  schema.rs  target.rs
crates/tracing/: Cargo.toml  build.rs
crates/tracing/permissions/autogenerated/: reference.md
crates/tracing/src/: error.rs  lib.rs  tracing.rs
docs/: README.md
docs/dev/: README.md  design.md
docs/prod/: book.toml
docs/prod/src/: SUMMARY.md  intro.md  quick_start.md  usage.md
docs/prod/src/intro/: features.md  installation.md  what-is.md
docs/prod/src/settings/: hotkeys.md  options.md
docs/prod/src/usage/: clipboard.md  edit.md  qrcode.md  settings.md  tray.md
scripts/: read-version.js  sync-version.js
