[workspace]
members = ["crates/*"]

resolver = "3"

[workspace.package]
version = "0.0.1"
authors = ["jinbin<1447281971@qq.com>"]
edition = "2024"
homepage = ""
license = "MulanPSL-2.0"
repository = ""

[workspace.dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tokio = "1.48"
thiserror = "2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"