[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A Tauri App"
license = ""
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json.workspace = true
serde.workspace = true
chrono.workspace = true
anyhow.workspace = true
log.workspace = true
tokio.workspace = true

ribo-db = { path = "../db" }
ribo-clipboard = { path = "../clipboard" }

tauri = { version = "2.9.2", features = ["tray-icon"] }
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
