[package]
name = "ribo-db"
description = "database for ribopper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"]}
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
log.workspace = true
regex = "1.12.2"

[dev-dependencies]
rand = "0.9.2"

[features]
default = ["file", "migrate"]
file = []
image = []
action = []
migrate = []